@@ -1,1 +1,0 @@
-DBD::Google provides a Perl DBI interface to the Google search engine.
